--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ nav {
   grid-template-columns: repeat(2, 42vw);
   width: 100vw;
   height: 5em;
-  background: lawngreen;
+  border-bottom: 2px solid rgb(73, 73, 73);
+  background: rgb(160, 160, 160);
 }
 
 /* 2.2.1 Logga */
@@ -81,7 +82,7 @@ nav {
 
 /* 2.3.1 Left Side */
 .left {
-  background: red;
+  background: rgb(73, 73, 73);
   grid-area: lf;
 }
 
@@ -102,18 +103,18 @@ nav {
 
 /* 2.3.2 HotDog */
 .hotdog-left {
-  background: blue;
+  background: rgb(160, 160, 160);
   grid-area: hl;
 }
 
 .hotdog-right {
-  background: pink;
+  background: rgb(160, 160, 160);
   grid-area: hr;
 }
 
 /* 2.3.3 Main Part */
 main {
-  background: green;
+  background: rgb(73, 73, 73);
   grid-area: mn;
   display: grid;
   grid-auto-flow: row;
@@ -147,7 +148,7 @@ main {
 
 /* 2.3.2 Right Side */
 .right {
-  background: grey;
+  background: rgb(73, 73, 73);
   grid-area: rt;
 }
 
